# physics-ai-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: blinn_phong.frag  blinn_phong.vert  debug.frag  debug.vert
docs/specs/: 2026-07-02-physics-engine-design.md
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Input.cpp  Input.h  KeyCodes.h  Logger.h  Window.cpp  Window.h
src/core/graphics/: DebugRenderer.cpp  DebugRenderer.h  Mesh.cpp  Mesh.h  MeshPrimitives.cpp  MeshPrimitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Vertex.h
src/core/scene/: Components.h  Scene.cpp  Scene.h  System.h
src/core/ui/: ImGuiLayer.cpp  ImGuiLayer.h
src/editor/: README.md
src/physics/: Collider.cpp  Collider.h  Constraint.cpp  Constraint.h  Math.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsTypes.h  RBIntegrate.cpp  RBIntegrate.h  README.md  Ragdoll.h  Verlet.cpp  Verlet.h
tests/: CMakeLists.txt  test_collider.cpp  test_constraints.cpp  test_determinism.cpp  test_nan_guard.cpp  test_ragdoll.cpp  test_rigidbody.cpp  test_verlet.cpp
